# DumpMindExperimentPlatform

Server/: README.md  go.mod
Server/cmd/: main.go
Server/pkgs/model/: task.go
docs/: Week1.md
kernel-builder/: .gitignore  Cargo.toml  README.md
kernel-builder/config/: kernel.toml  settings.toml
kernel-builder/nix/: debian-key  shell.nix
kernel-builder/script/: get.sh  mount.sh
kernel-builder/src/: lib.rs  main.rs
kernel-builder/src/config/: config.rs
kernel-builder/src/kernel/: compile.rs  download.rs  mod.rs  modify.rs
kernel-builder/src/kvm/: mod.rs  qemu.rs  ssh.rs
kernel-builder/src/parse/: compiler.rs  mod.rs  modify.rs  parse.rs  report.rs
kernel-builder/src/script/: script.rs
