[package]
name = "kernel-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
toml = "0.9.2"
tracing = "0.1.41"
thiserror = "2.0.12"
regex = "1.11.1"
once_cell = "1.21.3"
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["fs", "rt", "rt-multi-thread", "macros"] }
indicatif = "0.18.0"
futures = "0.3.31"
flate2 = "1.1.2"
tar = "0.4.44"
tracing-subscriber = "0.3.19"
