[package]
name = "kernel-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
toml = "0.9.2"
regex = "1.11.1"
once_cell = "1.21.3"
reqwest = "0.12.22"
flate2 = "1.1.2"
tar = "0.4.44"
tracing-subscriber = "0.3.19"
num_cpus = "1.17.0"
openssh = "0.11.5"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "2.0.12"
tracing = "0.1"
rand = "0.9.2"
secrecy = "0.10.3"
ssh2 = "0.9.5"
